docs(runbook): Gold 마트 실행 런북 + Phase 1 트러블슈팅 정리
Task 9에서 미뤘던 Gold 실행 절차를 런북화하고, 구현 중 부딪힌 2건을
기존 트러블슈팅 토픽에 흡수한다.
- runbook/gold-marts.md 신규 — 선행조건·event_type 검증·spark-submit·WAU 회귀.
- jdk-toolchain.md — date/timestamp collect 시 sun.util.calendar add-opens.
- scala-spark-test-idioms.md §3 — SQL 결과 타입 vs .as[T] 불일치(CANNOT_UP_CAST).
- troubleshooting/README 인덱스 보강.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>